--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
     #cropThumb{border:1px solid #e5e7eb;background:#f8fafc;max-width:100%}
     #cropCanvas{max-width:100%;border:1px solid #e5e7eb;background:#f8fafc}
   </style>
+
+  <style>
+    #assist{padding:12px 16px;background:#fff;border-bottom:1px solid #e5e7eb}
+    #assistRow{display:flex;gap:16px;flex-wrap:wrap}
+    #loupe,#beadSim{border:1px solid #e5e7eb;background:#f8fafc;max-width:100%}
+  </style>
 </head>
 <body>
   <header>
-    <h1>Peyote Pattern Maker <span style='font-size:12px; font-weight:600; padding:2px 6px; border:1px solid #e5e7eb; border-radius:6px; background:#f3f4f6; color:#111; vertical-align:middle;'>v3.4.3</span></h1>
+    <h1>Peyote Pattern Maker <span style='font-size:12px; font-weight:600; padding:2px 6px; border:1px solid #e5e7eb; border-radius:6px; background:#f3f4f6; color:#111; vertical-align:middle;'>v3.5.0</span></h1>
     <p>Photo → peyote grid → <strong>Delica FULL</strong> mapping • Fixed bead: Delica 11/0.</p>
   </header>
 
@@ -97,6 +103,22 @@
         <div class="prevTitle">Crop</div>
         <canvas id="cropThumb" width="240" height="160"></canvas>
         <div class="small">Live preview of the selected region</div>
+      </div>
+    </div>
+  </section>
+
+  <section id="assist">
+    <h3>Assist Previews</h3>
+    <div id="assistRow">
+      <div class="prevBox">
+        <div class="prevTitle">Zoom (loupe)</div>
+        <canvas id="loupe" width="140" height="140"></canvas>
+        <div class="small">Zoomed view of the crop</div>
+      </div>
+      <div class="prevBox">
+        <div class="prevTitle">Bead view</div>
+        <canvas id="beadSim" width="260" height="180"></canvas>
+        <div class="small">Quick simulated beads of the crop</div>
       </div>
     </div>
   </section>
