--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
     #assistRow{display:flex;gap:16px;flex-wrap:wrap}
     #loupe,#beadSim{border:1px solid #e5e7eb;background:#f8fafc;max-width:100%}
   </style>
+
+  <style>
+    /* Improve touch interactions on crop canvas */
+    #cropCanvas{ touch-action: none; }
+  </style>
 </head>
 <body>
   <header>
-    <h1>Peyote Pattern Maker <span style='font-size:12px; font-weight:600; padding:2px 6px; border:1px solid #e5e7eb; border-radius:6px; background:#f3f4f6; color:#111; vertical-align:middle;'>v3.5.1</span></h1>
+    <h1>Peyote Pattern Maker <span style='font-size:12px; font-weight:600; padding:2px 6px; border:1px solid #e5e7eb; border-radius:6px; background:#f3f4f6; color:#111; vertical-align:middle;'>v3.5.2</span></h1>
     <p>Photo → peyote grid → <strong>Delica FULL</strong> mapping • Fixed bead: Delica 11/0.</p>
   </header>
 
