--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
   <style>
     /* Improve touch interactions on crop canvas */
-    #cropCanvas{ touch-action: none; }
+    #cropCanvas{ touch-action: pan-y pinch-zoom; }
   </style>
 </head>
 <body>
   <header>
-    <h1>Peyote Pattern Maker <span style='font-size:12px; font-weight:600; padding:2px 6px; border:1px solid #e5e7eb; border-radius:6px; background:#f3f4f6; color:#111; vertical-align:middle;'>v3.5.3</span></h1>
+    <h1>Peyote Pattern Maker <span style='font-size:12px; font-weight:600; padding:2px 6px; border:1px solid #e5e7eb; border-radius:6px; background:#f3f4f6; color:#111; vertical-align:middle;'>v3.5.4</span></h1>
     <p>Photo → peyote grid → <strong>Delica FULL</strong> mapping • Fixed bead: Delica 11/0.</p>
   </header>
 
