--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   <header>
-    <h1>Peyote Pattern Maker <span style='font-size:12px; font-weight:600; padding:2px 6px; border:1px solid #e5e7eb; border-radius:6px; background:#f3f4f6; color:#111; vertical-align:middle;'>v3.5.6</span></h1>
+    <h1>Peyote Pattern Maker <span style='font-size:12px; font-weight:600; padding:2px 6px; border:1px solid #e5e7eb; border-radius:6px; background:#f3f4f6; color:#111; vertical-align:middle;'>v3.5.7</span></h1>
     <p>Photo → peyote grid → <strong>Delica FULL</strong> mapping • Fixed bead: Delica 11/0.</p>
   </header>
 
@@ -134,9 +134,10 @@
     <div class="control">
       <button id="btnResetCrop">Reset Crop</button>
       <label class="small"><input type="checkbox" id="lockCropAspect"> Lock crop to bead aspect</label>
+      <label class="small"><input type="checkbox" id="debugTouch"> Show touch point</label>
       <span id="cropAspectLabel" class="small"></span>
     </div>
-    <canvas id="cropCanvas" width="600" height="360"></canvas>
+    <canvas id="cropCanvas" width="600" height="360" style="width:600px;height:360px"></canvas>
   </section>
 
   <main>
