--- a/index.html
+++ b/index.html
@@ -1,166 +1,120 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Peyote Pattern Maker — Delica FULL (v3.4)</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Peyote Pattern Maker v3.6.0</title>
   <style>
-    #previewPane, #cropper { padding:12px 16px; background:#fff; border-bottom:1px solid #e5e7eb }
-    #previewRow{display:flex;gap:16px;flex-wrap:wrap}
-    .prevBox{background:#fff;border:1px solid #e5e7eb;padding:8px;width:280px}
+    body{margin:0;font-family:ui-sans-serif,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;background:#f1f5f9;color:#0f172a}
+    header, footer{background:#fff;border-bottom:1px solid #e5e7eb}
+    header{padding:12px 16px;display:flex;align-items:center;justify-content:space-between}
+    h1{font-size:18px;margin:0}
+    .badge{font-size:12px;font-weight:600;padding:2px 6px;border:1px solid #e5e7eb;border-radius:6px;background:#f3f4f6;color:#111;vertical-align:middle}
+    main{display:flex;flex-direction:column;gap:12px;padding:12px 16px}
+    section{background:#fff;border:1px solid #e5e7eb;border-radius:8px;overflow:hidden}
+    #statusPanel{padding:10px 16px;background:#fff;border-bottom:1px solid #e5e7eb}
+    #assistRow{display:flex;gap:16px;flex-wrap:wrap;padding:12px}
+    .prevBox{background:#ffffff;border:1px solid #e5e7eb;border-radius:8px;padding:8px}
     .prevTitle{font-weight:600;margin-bottom:6px}
-    #origPreview{max-width:100%;height:auto;border:1px solid #e5e7eb;background:#f8fafc}
-    #cropThumb{border:1px solid #e5e7eb;background:#f8fafc;max-width:100%}
-    #cropCanvas{max-width:100%;border:1px solid #e5e7eb;background:#f8fafc}
-  </style>
-
-  <style>
-    #assist{padding:12px 16px;background:#fff;border-bottom:1px solid #e5e7eb}
-    #assistRow{display:flex;gap:16px;flex-wrap:wrap}
+    .row{display:flex;gap:16px;flex-wrap:wrap;padding:12px}
+    .col{flex:1;min-width:260px}
+    .small{font-size:12px;color:#475569}
+    #origBox,#cropThumbBox{display:flex;flex-direction:column;gap:6px}
+    #origPreview{max-width:100%;border:1px solid #e5e7eb;background:#f8fafc}
+    #cropThumb{border:1px solid #e5e7eb;background:#f8fafc}
     #loupe,#beadSim{border:1px solid #e5e7eb;background:#f8fafc;max-width:100%}
-  </style>
-
-  <style>
-    /* Improve touch interactions on crop canvas */
-    #cropCanvas{ touch-action: pan-y pinch-zoom; }
+    #controls{padding:12px;display:flex;flex-wrap:wrap;gap:12px;align-items:center}
+    #cropCanvas{border:1px solid #e5e7eb;background:#fff;width:600px;height:360px;touch-action:pan-y pinch-zoom}
+    label{display:inline-flex;align-items:center;gap:6px}
+    input[type="number"]{width:80px}
+    button{padding:6px 10px;border:1px solid #d1d5db;background:#f3f4f6;border-radius:6px;cursor:pointer}
+    #debugPanel{position:relative}
+    #debugOut{white-space:pre-wrap;margin:8px 0 0 0; font-size:12px; color:#111; background:#f9fafb; border:1px solid #e5e7eb; padding:8px; border-radius:6px; max-height:260px; overflow:auto}
   </style>
 </head>
 <body>
   <header>
-    <h1>Peyote Pattern Maker <span style='font-size:12px; font-weight:600; padding:2px 6px; border:1px solid #e5e7eb; border-radius:6px; background:#f3f4f6; color:#111; vertical-align:middle;'>v3.5.8</span></h1>
-    <p>Photo → peyote grid → <strong>Delica FULL</strong> mapping • Fixed bead: Delica 11/0.</p>
+    <h1>Peyote Pattern Maker <span class="badge">v3.6.0</span></h1>
+    <div>
+      <label class="small"><input id="crosshairToggle" type="checkbox"> Show touch crosshair</label>
+    </div>
   </header>
 
-  <section id="controls">
-    <div class="control">
-      <label>Image</label>
-      <input type="file" id="file" accept="image/*" />
-    </div>
-
-    <div class="control">
-      <label>Bead width</label>
-      <input type="number" id="beadWidth" min="0" max="400" value="90" />
-      <label class="small"><input type="checkbox" id="autoWidth"> Auto</label>
-    </div>
-
-    <div class="control">
-      <label>Bead height</label>
-      <input type="number" id="beadHeight" min="0" max="400" value="0" />
-      <label class="small"><input type="checkbox" id="autoHeight" checked> Auto</label>
-    </div>
-
-    <div class="control">
-      <label># Colors</label>
-      <input type="number" id="kColors" min="2" max="64" value="12" />
-    </div>
-
-    <div class="control">
-      <label>Mapping mode</label>
-      <select id="mapMode">
-        <option value="palette_fit" selected>Palette-fit (best 10–12 Delica)</option>
-        <option value="quantize_then_map">Quantize → Map to Delica</option>
-        <option value="direct_to_palette">Direct to Delica (no quantize)</option>
-      </select>
-      <span class="small">Palette-fit is tuned for 10–12 colors.</span>
-    </div>
-
-    <div class="control">
-      <label>Cell px</label>
-      <input type="number" id="cellPx" min="6" max="30" value="14" />
-      <label><input type="checkbox" id="showGrid" checked /> Grid</label>
-      <label><input type="checkbox" id="brickOffset" checked /> Peyote offset</label>
-    </div>
-
-    <div class="control">
-      <label><input type="checkbox" id="lockAspect" checked> Lock aspect (avoid stretch)</label>
-    </div>
-
-    <div class="control">
-      <strong>Bead size:</strong> Delica 11/0 (fixed) — ~1.6 × 1.3 mm
-    </div>
-    <div class="control">
-      <label>Shrinkage</label>
-      <input type="range" id="shrinkPct" min="0" max="15" value="0" />
-      <span id="shrinkLabel" class="small">0%</span>
-    </div>
-    <div class="control">
-      <div id="finalSize" class="small">Final size: —</div>
-    </div>
-
-    <div class="control">
-      <button id="btnGenerate">Generate</button>
-      <button id="btnDownloadPNG" disabled>Download PNG</button>
-      <button id="btnDownloadJSON" disabled>Legend JSON</button>
-      <button id="btnDownloadCSV" disabled>Legend CSV</button>
-    </div>
-  </section>
-
-  <section id="previewPane">
-    <h3>Image Preview</h3>
-    <div id="previewRow">
-      <div class="prevBox">
-        <div class="prevTitle">Original</div>
-        <img id="origPreview" alt="original preview" />
-        <div id="fileInfo" class="small"></div>
-      </div>
-      <div class="prevBox">
-        <div class="prevTitle">Crop</div>
-        <canvas id="cropThumb" width="240" height="160"></canvas>
-        <div class="small">Live preview of the selected region</div>
-      </div>
-    </div>
-  </section>
-
-  <section id="assist">
-    <h3>Assist Previews</h3>
-    <div id="assistRow">
-      <div class="prevBox">
-        <div class="prevTitle">Zoom (loupe)</div>
-        <canvas id="loupe" width="140" height="140"></canvas>
-        <div class="small">Zoomed view of the crop</div>
-      </div>
-      <div class="prevBox">
-        <div class="prevTitle">Bead view</div>
-        <canvas id="beadSim" width="260" height="180"></canvas>
-        <div class="small">Quick simulated beads of the crop</div>
-      </div>
-    </div>
-  </section>
-
-  <section id="cropper">
-    <h3>Crop</h3>
-    <p class="small">Drag the box or its corners to select the part of the photo to convert.</p>
-    <div class="control">
-      <button id="btnResetCrop">Reset Crop</button>
-      <label class="small"><input type="checkbox" id="lockCropAspect"> Lock crop to bead aspect</label>
-      <label class="small"><input type="checkbox" id="debugTouch"> Show touch point</label>
-      <span id="cropAspectLabel" class="small"></span>
-    </div>
-    <canvas id="cropCanvas" width="600" height="360" style="width:600px;height:360px"></canvas>
+  <section id="statusPanel">
+    <div style="font-weight:600">Status</div>
+    <div id="statusLog" class="small" style="white-space:pre-line;color:#374151">Ready.</div>
   </section>
 
   <main>
-    <div id="canvasWrap">
-      <canvas id="preview" width="1200" height="800"></canvas>
-    </div>
-    <aside id="legend"></aside>
+    <section id="controls">
+      <input id="file" type="file" accept="image/jpeg,image/png,image/webp,image/*;capture=environment">
+      <button id="btnGenerate">Generate</button>
+      <button id="btnResetCrop">Reset Crop</button>
+      <label class="small"><input type="checkbox" id="lockCropAspect" checked> Lock crop to bead aspect</label>
+      <span id="cropAspectLabel" class="small"></span>
+      <label class="small">Bead W: <input id="beadW" type="number" value="90" min="10" max="400"></label>
+      <label class="small">Bead H: <input id="beadH" type="number" value="50" min="10" max="400"></label>
+    </section>
+
+    <section id="previewPane">
+      <div class="row">
+        <div class="col" id="origBox">
+          <div class="small">Original</div>
+          <img id="origPreview" alt="original preview">
+          <div id="fileInfo" class="small">–</div>
+        </div>
+        <div class="col" id="cropThumbBox">
+          <div class="small">Crop</div>
+          <canvas id="cropThumb" width="240" height="160"></canvas>
+        </div>
+      </div>
+    </section>
+
+    <section id="assist">
+      <h3 style="margin:12px">Assist Previews</h3>
+      <div id="assistRow">
+        <div class="prevBox">
+          <div class="prevTitle">Zoom (loupe)</div>
+          <canvas id="loupe" width="140" height="140"></canvas>
+          <div class="small">Zoomed view of the crop</div>
+        </div>
+        <div class="prevBox">
+          <div class="prevTitle">Bead view</div>
+          <canvas id="beadSim" width="260" height="180"></canvas>
+          <div class="small">Quick simulated beads</div>
+        </div>
+      </div>
+    </section>
+
+    <section id="cropper" style="padding:12px">
+      <canvas id="cropCanvas" width="600" height="360"></canvas>
+    </section>
   </main>
 
-  <footer>
-    <p>Palette file: <code>palettes/delica_full.json</code> (locked). Replace with your official list anytime.</p>
+  <section id="debugPanel" style="padding:12px 16px;background:#fff;border-top:1px solid #e5e7eb">
+    <div style="display:flex;align-items:center;justify-content:space-between;gap:8px;">
+      <h3 style="margin:0">Debug Data</h3>
+      <button id="btnCopyDebug">Copy</button>
+    </div>
+    <pre id="debugOut"></pre>
+  </section>
+
+  <footer style="padding:12px 16px;background:#fff;border-top:1px solid #e5e7eb">
+    <div class="small">© 2025</div>
   </footer>
 
+  <!-- Inline minimal palette (replaced if full JSON loads) -->
   <script id="inlinePalette">
-window.delicaFull = window.delicaFull || [
-  {"code":"DB-0001","name":"Opaque White","hex":"#FFFFFF"},
-  {"code":"DB-0002","name":"Opaque Black","hex":"#000000"},
-  {"code":"DB-0724","name":"Opaque Yellow","hex":"#F2C100"},
-  {"code":"DB-0792","name":"Opaque Cobalt Blue","hex":"#204B9B"},
-  {"code":"DB-0206","name":"Matte Opaque Green","hex":"#5DBB74"},
-  {"code":"DB-0209","name":"Matte Opaque Brown","hex":"#6D4C41"}
-];
-</script>
-<script src="main.js"></script>
+  window.delicaFull = window.delicaFull || [
+    {"code":"DB-0001","name":"Opaque White","hex":"#FFFFFF"},
+    {"code":"DB-0002","name":"Opaque Black","hex":"#000000"},
+    {"code":"DB-0724","name":"Opaque Yellow","hex":"#F2C100"},
+    {"code":"DB-0792","name":"Opaque Cobalt Blue","hex":"#204B9B"},
+    {"code":"DB-0206","name":"Matte Opaque Green","hex":"#5DBB74"},
+    {"code":"DB-0209","name":"Matte Opaque Brown","hex":"#6D4C41"}
+  ];
+  </script>
+
+  <script src="main.js"></script>
 </body>
 </html>
